--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # change the prefix from 'C-b' to 'M-a'
 # (remap capslock to CTRL for easy access)
 unbind C-b
-set -g prefix C-w
+set -g prefix M-a
 bind C-b send-prefix
 
 # start with window 1 (instead of 0)
@@ -45,8 +45,8 @@ bind -n M-Down select-pane -D
 set-window-option -g mode-keys vi
 
 # set default terminal mode to 256 colors
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
+set -as terminal-features ",xterm-256color:RGB"
 
 # present a menu of URLs to open from the visible pane. sweet.
 bind u capture-pane \;\
